Responsive fix for nav dropdown on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,10 +97,20 @@ ul, ol {
   background-image: url("/media/cartographer.png");
 }
 
+
+
 .color-lime {
   color: #cddc39;
 }
 
+@media (min-width: 768px) {
+  .bg-sm-black {
+  background-color: #000 !important;
+  }
+  .text-sm-white {
+    color: #fff;
+  }
+}
 /* ============================== Navbar Brand ============================== */ 
 
 .brand-heading {
@@ -161,13 +171,6 @@ ul, ol {
 
 /* ============================= Navbar styling ============================= */
 
-.nav-link {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.nav-link:hover {
-  color: rgba(255, 255, 255, 0.9);
-}
 
 /* ============================= Navbar Megamenu ============================ */
 
@@ -190,7 +193,7 @@ ul, ol {
 
 .dropdown-menu[data-bs-popper] {
   top: 100%;
-  left: 0;
+  left: -75%;
   margin-top: 0;
 }
 
@@ -620,19 +623,19 @@ input[name='q']::placeholder {
 @media only screen and (min-width: 768px){
   .jumbotron {
     margin-bottom: 0;
-    padding-top: 220px;
+    /* padding-top: 220px; */
   }
   .jumbo-content {
-    top: 10%;
+    top: 20%;
   }
   .paral h1 {
     color: rgba(255, 255, 255, 0.8);
-    font-size: 60px;
+    font-size: 54px;
     text-align: center;
     line-height: 100px;
   }
   .paral p {
-    font-size: 24px;
+    font-size: 20px;
     color: #f5f5f5;
     text-align: center;
     line-height: 60px;
@@ -644,7 +647,7 @@ input[name='q']::placeholder {
     background-attachment: fixed;
     background-size: 100vh auto;
     background-repeat: no-repeat;
-    background-position: 40% 10%;
+    background-position: 40% 0%;
   }
 }
 
@@ -653,10 +656,10 @@ input[name='q']::placeholder {
 @media only screen and (min-width: 992px){
   .jumbotron {
     margin-bottom: 0;
-    padding-top: 200px;
+    /* padding-top: 200px; */
   }
   .jumbo-content {
-    top: 10%;
+    top: 25%;
   }
   .paral h1 {
     color: rgba(255, 255, 255, 0.8);
@@ -670,7 +673,7 @@ input[name='q']::placeholder {
     background-attachment: fixed;
     background-size: 100vh auto;
     background-repeat: no-repeat;
-    background-position: 80% 10%;
+    background-position: 80% 0%;
   }
 }
 
